# autogen_actor

./: Cargo.toml  default.nix  result
src/: a.rs  auth_handshake.rs  b.rs  client.rs  lib.rs  message.rs  server.rs
src/actor_a/: mod.rs
src/actor_b/: mod.rs
